chore: harden security and optimize architecture for scalability